# wdym-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs  modname.rs  search.rs
src/translators/: google_translate.rs  mod.rs
