[package]
name = "wdym"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive", "unstable-doc"] }
isolang = "2.4.0"
reqwest = { version = "0.12.12", features = ["blocking", "json", "socks"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
